ocp4.5 to 4.7 日本語化対応

--- a/advanced-service-mesh-dev.adoc
+++ b/advanced-service-mesh-dev.adoc
@@ -16,7 +16,7 @@
 モジュール 1 で _inventory_ と _catalog_ マイクロサービスを既にデプロイしている場合は、このステップをスキップして「1. サイドカーの自動インジェクションを有効にする」のセクションに進んでください。
 ====
 
-**今日はモジュール1やモジュール2を実施していない場合** 、またはモジュール1やモジュール2を完全に終わらせていない場合は、CodeReady Workspaces Terminalで以下のシェルスクリプトを実行して、coolstoreアプリケーションとマイクロサービスをデプロイしてください:
+**モジュール1やモジュール2を実施していない場合** 、またはモジュール1やモジュール2を完全に終わらせていない場合は、CodeReady Workspaces Terminalで以下のシェルスクリプトを実行して、coolstoreアプリケーションとマイクロサービスをデプロイしてください:
 
 次のスクリプトでinventoryサービスをデプロイします:
 
